--- a/VDR Html/VDR.css
+++ b/VDR Html/VDR.css
@@ -18,6 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 @media (max-width: 700px) {
@@ -29,9 +30,10 @@
 /* Estilo para el icono */
 .icono {
   padding-left: 3px;
-  width: 50px;
+  width: 6em;
   height: 50px;
   color: rgb(231, 231, 231);
+
 }
 
 /* Estilo para el titulo */
